--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=infrastructure-service
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=infrastructure-service
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+kubernetes.config.file.path=/home/maybetuandat/.kube/config
+kubernetes.namespace=default
+
+KUBEVIRT_GROUP=kubevirt.io
+KUBEVIRT_VERSION=v1
+KUBEVIRT_PLURAL_VM=virtualmachines
+CDI_GROUP=cdi.kubevirt.io
+CDI_VERSION=v1beta1
+CDI_PLURAL_DV=datavolumes
