--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=infrastructure-service
+server.port=8081
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=infrastructure-service
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -7,7 +8,7 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 kubernetes.config.file.path=/home/maybetuandat/.kube/config
 kubernetes.namespace=default
 
@@ -17,3 +18,5 @@ KUBEVIRT_PLURAL_VM=virtualmachines
 CDI_GROUP=cdi.kubevirt.io
 CDI_VERSION=v1beta1
 CDI_PLURAL_DV=datavolumes
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+spring.kafka.consumer.properties.spring.json.value.default.type=java.util.Map
