--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ CDI_VERSION=v1beta1
 CDI_PLURAL_DV=datavolumes
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
 spring.kafka.consumer.properties.spring.json.value.default.type=java.util.Map
+
+ssh.default.username=ubuntu
+ssh.default.password=ubuntu
